// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试没有任何参数 1`] = `
.c0 .c1 {
  margin-right: 8px;
}

<div
  className="c0"
/>
`;

exports[`测试自定义渲染 CheckBox 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  color: rgba(204,204,204,1);
  fill: currentColor;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  cursor: pointer;
  opacity: 0;
}

.c4 {
  position: relative;
  top: -0.09em;
  display: inline-block;
  line-height: 1;
  white-space: nowrap;
  vertical-align: middle;
  outline: none;
  cursor: pointer;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  display: inline-block;
  font-size: 12px;
  line-height: 0;
  font-variant: tabular-nums;
  font-feature-settings: 'tnum';
  color: rgba(51,51,51,1);
  cursor: pointer;
}

.c2 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c2 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(204,204,204,1);
}

.c2 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c2:hover .c7 .c8 {
  color: rgba(26,122,248,1);
}

.c2:active .c7 .c8 {
  color: rgba(12,108,235,1);
}

.c11 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c11 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(26,122,248,1);
}

.c11 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c11:hover .c7 .c8 {
  color: rgba(51,139,255,1);
}

.c11:active .c7 .c8 {
  color: rgba(12,108,235,1);
}

.c12 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c12 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(204,204,204,1);
}

.c12 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c12 .c5,
.c12 .c3 {
  cursor: not-allowed;
}

.c0 .c1 {
  margin-right: 8px;
}

<div
  className="c0"
>
  <div>
    <label
      className="c1 c2 muya-checkbox-wrapper"
      style={Object {}}
    >
      <span
        className="c3 c4 muya-checkbox-span"
        onClick={[Function]}
      >
        <input
          autoFocus={false}
          checked={false}
          className="c5 c6"
          disabled={false}
          onChange={[Function]}
          readOnly={false}
          type="checkbox"
          value={1}
        />
        <span
          className="c7 muya-checkbox-icon-wrap"
        >
          <svg
            aria-hidden="false"
            className="c8 c9 muya-checkbox-icon"
            color="rgba(204,204,204,1)"
            focusable="false"
            viewBox="0 0 1024 1024"
          >
            <rect
              fill="rgba(255,255,255,1)"
              height={716.8}
              width={716.8}
              x={153.60000000000002}
              y={153.60000000000002}
            />
            <path
              d="M768 42.667c117.824 0 213.333 95.509 213.333 213.333v512c0 117.824-95.509 213.333-213.333 213.333H256c-117.824 0-213.333-95.509-213.333-213.333V256c0-117.824 95.509-213.333 213.333-213.333h512zm0 64H256c-81.365 0-147.52 65.066-149.301 145.994l-.032 3.339v512c0 81.365 65.066 147.52 145.994 149.301l3.339.032h512c81.365 0 147.52-65.066 149.301-145.994l.032-3.339V256c0-81.365-65.066-147.52-145.994-149.301l-3.339-.032z"
            />
          </svg>
        </span>
      </span>
      <span
        className="c10 "
      >
        1
      </span>
    </label>
  </div>
  <div>
    <label
      className="c1 c2 muya-checkbox-wrapper"
      style={Object {}}
    >
      <span
        className="c3 c4 muya-checkbox-span"
        onClick={[Function]}
      >
        <input
          autoFocus={false}
          checked={false}
          className="c5 c6"
          disabled={false}
          onChange={[Function]}
          readOnly={false}
          type="checkbox"
          value={2}
        />
        <span
          className="c7 muya-checkbox-icon-wrap"
        >
          <svg
            aria-hidden="false"
            className="c8 c9 muya-checkbox-icon"
            color="rgba(204,204,204,1)"
            focusable="false"
            viewBox="0 0 1024 1024"
          >
            <rect
              fill="rgba(255,255,255,1)"
              height={716.8}
              width={716.8}
              x={153.60000000000002}
              y={153.60000000000002}
            />
            <path
              d="M768 42.667c117.824 0 213.333 95.509 213.333 213.333v512c0 117.824-95.509 213.333-213.333 213.333H256c-117.824 0-213.333-95.509-213.333-213.333V256c0-117.824 95.509-213.333 213.333-213.333h512zm0 64H256c-81.365 0-147.52 65.066-149.301 145.994l-.032 3.339v512c0 81.365 65.066 147.52 145.994 149.301l3.339.032h512c81.365 0 147.52-65.066 149.301-145.994l.032-3.339V256c0-81.365-65.066-147.52-145.994-149.301l-3.339-.032z"
            />
          </svg>
        </span>
      </span>
      <span
        className="c10 "
      >
        2
      </span>
    </label>
  </div>
  <div>
    <label
      className="c1 c2 muya-checkbox-wrapper"
      style={Object {}}
    >
      <span
        className="c3 c4 muya-checkbox-span"
        onClick={[Function]}
      >
        <input
          autoFocus={false}
          checked={false}
          className="c5 c6"
          disabled={false}
          onChange={[Function]}
          readOnly={false}
          type="checkbox"
          value={3}
        />
        <span
          className="c7 muya-checkbox-icon-wrap"
        >
          <svg
            aria-hidden="false"
            className="c8 c9 muya-checkbox-icon"
            color="rgba(204,204,204,1)"
            focusable="false"
            viewBox="0 0 1024 1024"
          >
            <rect
              fill="rgba(255,255,255,1)"
              height={716.8}
              width={716.8}
              x={153.60000000000002}
              y={153.60000000000002}
            />
            <path
              d="M768 42.667c117.824 0 213.333 95.509 213.333 213.333v512c0 117.824-95.509 213.333-213.333 213.333H256c-117.824 0-213.333-95.509-213.333-213.333V256c0-117.824 95.509-213.333 213.333-213.333h512zm0 64H256c-81.365 0-147.52 65.066-149.301 145.994l-.032 3.339v512c0 81.365 65.066 147.52 145.994 149.301l3.339.032h512c81.365 0 147.52-65.066 149.301-145.994l.032-3.339V256c0-81.365-65.066-147.52-145.994-149.301l-3.339-.032z"
            />
          </svg>
        </span>
      </span>
      <span
        className="c10 "
      >
        3
      </span>
    </label>
  </div>
</div>
`;

exports[`测试自定义渲染 CheckBox width ellipsis 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  color: rgba(204,204,204,1);
  fill: currentColor;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  cursor: pointer;
  opacity: 0;
}

.c4 {
  position: relative;
  top: -0.09em;
  display: inline-block;
  line-height: 1;
  white-space: nowrap;
  vertical-align: middle;
  outline: none;
  cursor: pointer;
}

.c11 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c11 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(204,204,204,1);
}

.c11 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c11:hover .c7 .c8 {
  color: rgba(26,122,248,1);
}

.c11:active .c7 .c8 {
  color: rgba(12,108,235,1);
}

.c12 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c12 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(26,122,248,1);
}

.c12 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c12:hover .c7 .c8 {
  color: rgba(51,139,255,1);
}

.c12:active .c7 .c8 {
  color: rgba(12,108,235,1);
}

.c13 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c13 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(204,204,204,1);
}

.c13 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c13 .c5,
.c13 .c3 {
  cursor: not-allowed;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  display: inline-block;
  font-size: 12px;
  line-height: 0;
  font-variant: tabular-nums;
  font-feature-settings: 'tnum';
  color: rgba(51,51,51,1);
  cursor: pointer;
  width: 100px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c2 .c10 {
  padding: 0 4px;
  line-height: 16px;
}

.c2 .c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-top;
  font-size: 16px;
  height: 16px;
  width: 16px;
  line-height: 16px;
  padding: 0;
  color: rgba(204,204,204,1);
}

.c2 .c7 .c8 {
  z-index: 1;
  -webkit-transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
  transition: color cubic-bezier(0.4,0,0.2,1) 150ms;
}

.c2:hover .c7 .c8 {
  color: rgba(26,122,248,1);
}

.c2:active .c7 .c8 {
  color: rgba(12,108,235,1);
}

.c0 .c1 {
  margin-right: 8px;
}

<div
  className="c0"
>
  <label
    className="c1 c2 muya-checkbox-wrapper"
    style={Object {}}
  >
    <span
      className="c3 c4 muya-checkbox-span"
      onClick={[Function]}
    >
      <input
        autoFocus={false}
        checked={false}
        className="c5 c6"
        disabled={false}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
        value={1}
      />
      <span
        className="c7 muya-checkbox-icon-wrap"
      >
        <svg
          aria-hidden="false"
          className="c8 c9 muya-checkbox-icon"
          color="rgba(204,204,204,1)"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <rect
            fill="rgba(255,255,255,1)"
            height={716.8}
            width={716.8}
            x={153.60000000000002}
            y={153.60000000000002}
          />
          <path
            d="M768 42.667c117.824 0 213.333 95.509 213.333 213.333v512c0 117.824-95.509 213.333-213.333 213.333H256c-117.824 0-213.333-95.509-213.333-213.333V256c0-117.824 95.509-213.333 213.333-213.333h512zm0 64H256c-81.365 0-147.52 65.066-149.301 145.994l-.032 3.339v512c0 81.365 65.066 147.52 145.994 149.301l3.339.032h512c81.365 0 147.52-65.066 149.301-145.994l.032-3.339V256c0-81.365-65.066-147.52-145.994-149.301l-3.339-.032z"
          />
        </svg>
      </span>
    </span>
    <span
      className="c10 "
    >
      1
    </span>
  </label>
  <label
    className="c1 c2 muya-checkbox-wrapper"
    style={Object {}}
  >
    <span
      className="c3 c4 muya-checkbox-span"
      onClick={[Function]}
    >
      <input
        autoFocus={false}
        checked={false}
        className="c5 c6"
        disabled={false}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
        value={2}
      />
      <span
        className="c7 muya-checkbox-icon-wrap"
      >
        <svg
          aria-hidden="false"
          className="c8 c9 muya-checkbox-icon"
          color="rgba(204,204,204,1)"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <rect
            fill="rgba(255,255,255,1)"
            height={716.8}
            width={716.8}
            x={153.60000000000002}
            y={153.60000000000002}
          />
          <path
            d="M768 42.667c117.824 0 213.333 95.509 213.333 213.333v512c0 117.824-95.509 213.333-213.333 213.333H256c-117.824 0-213.333-95.509-213.333-213.333V256c0-117.824 95.509-213.333 213.333-213.333h512zm0 64H256c-81.365 0-147.52 65.066-149.301 145.994l-.032 3.339v512c0 81.365 65.066 147.52 145.994 149.301l3.339.032h512c81.365 0 147.52-65.066 149.301-145.994l.032-3.339V256c0-81.365-65.066-147.52-145.994-149.301l-3.339-.032z"
          />
        </svg>
      </span>
    </span>
    <span
      className="c10 "
    >
      2
    </span>
  </label>
  <label
    className="c1 c2 muya-checkbox-wrapper"
    style={Object {}}
  >
    <span
      className="c3 c4 muya-checkbox-span"
      onClick={[Function]}
    >
      <input
        autoFocus={false}
        checked={false}
        className="c5 c6"
        disabled={false}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
        value={3}
      />
      <span
        className="c7 muya-checkbox-icon-wrap"
      >
        <svg
          aria-hidden="false"
          className="c8 c9 muya-checkbox-icon"
          color="rgba(204,204,204,1)"
          focusable="false"
          viewBox="0 0 1024 1024"
        >
          <rect
            fill="rgba(255,255,255,1)"
            height={716.8}
            width={716.8}
            x={153.60000000000002}
            y={153.60000000000002}
          />
          <path
            d="M768 42.667c117.824 0 213.333 95.509 213.333 213.333v512c0 117.824-95.509 213.333-213.333 213.333H256c-117.824 0-213.333-95.509-213.333-213.333V256c0-117.824 95.509-213.333 213.333-213.333h512zm0 64H256c-81.365 0-147.52 65.066-149.301 145.994l-.032 3.339v512c0 81.365 65.066 147.52 145.994 149.301l3.339.032h512c81.365 0 147.52-65.066 149.301-145.994l.032-3.339V256c0-81.365-65.066-147.52-145.994-149.301l-3.339-.032z"
          />
        </svg>
      </span>
    </span>
    <span
      className="c10 "
    >
      3
    </span>
  </label>
</div>
`;
